[package]
name = "canary_native"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "canary_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.32.1"
anyhow = "1.0"
text-splitter = { version = "0.14.1", features = ["tiktoken-rs", "markdown"] }
tiktoken-rs = "0.5.9"
htmd = "0.1.6"
git2 = "0.18.3"
stop-words = "0.8.0"
keyword_extraction = { version = "1.4.3", features = ["yake"] }
glob-match = "0.2.1"

[dev-dependencies]
insta = "1.38.0"
include_uri = "0.1.1"
nanoid = "0.4.0"